--- a/src/Component/Navs/Navs.css
+++ b/src/Component/Navs/Navs.css
@@ -19,6 +19,7 @@ nav {
 nav a {
   font-weight: bold;
   letter-spacing: 2px;
+
   margin: 0 20px;
 }
 
@@ -31,11 +32,24 @@ nav img {
   border-bottom: 1px solid transparent;
   transition: padding-bottom 0.4s ease-in-out, border-color 0.3s ease;
 }
-
+.nav-link i{
+  font-size: 20px;
+  color: rgb(46, 46, 230);
+  padding-right: 10px;
+}
 .nav-link:hover {
   padding-bottom: 20px;
-  border-bottom-color: var(--bs-teal);
+  border-bottom-color: var(--bs-teal);}
+.navbar-nav{
+  padding: 0 0 0 20px;
+
+  white-space: nowrap;
 }
+#login{
+  border: 1px solid rgb(46, 46, 230);
+  border-radius: 10px;
+}
+
 
 @media (max-width: 990px) {
   nav img {
@@ -49,4 +63,21 @@ nav img {
     font-size: 14px;
     text-align: center;
   }
+  
+  
 }
+@media (max-width: 1200px) {
+  nav img {
+    padding: 0 20px;
+    margin-left: 10px;
+    width: 150px;
+  }
+  .nav-link {
+    margin-right: 5px;
+    font-size: 14px;
+    text-align: center;
+  }
+  
+  
+}
+
