--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -21,19 +21,20 @@
 
 .formulaire h2 {
   font-family: merriweather;
-  font-size: 40px;
-  margin-bottom: 40px;
+  font-size: 45px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
 .formulaire label {
-  font-size: 25px;
-  font-family: redressed;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .formulaire input,
 .formulaire textarea {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
+  font-size: 19px;
   width: 100%;
   height: 50px;
   padding: 7px;
@@ -86,4 +87,10 @@
   .la {
     max-width: 200px;
   }
+}
+.msg{
+  padding-bottom: 40px;
+  text-align: center;
+  font-size: 28px;
+  font-family: redressed;
 }
