--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -50,11 +50,15 @@
 
 .img-f {
   width: 100%;
+  height: 600px;
+  max-width: 100%;
   min-height: 500px;
   margin-left: -12px;
 }
 .img-f1 {
   width: 100%;
+  height: 650px;
+  max-width: 100%;
   min-height: 500px;
   margin-left: 12px;
 }
@@ -64,6 +68,7 @@
   width: 100%;
   background-size: cover;
 }
+
 .card-title {
   text-align: center;
   font-weight: bold;
@@ -92,6 +97,7 @@
   padding-top: 10px;
   width: 100%;
 }
+
 
 .body {
   margin: 0;
