--- a/src/Component/Login/Login.css
+++ b/src/Component/Login/Login.css
@@ -1,11 +1,98 @@
-.login{
-    background-color: aliceblue;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, .25), 0 10px 10px rgba(0,0,0,0.22);
-    position: relative;
-    overflow: hidden;
-    width: 678px;
-    max-width: 100%;
-    min-width:400px;
+.hero {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("./../../assets/living-room-green-background.jpg") center center fixed
+      no-repeat;
+background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login {
+  border-radius: 30px;
+  width: 100%;
+  max-width: 1000px;
+  height: auto;
+  padding: 40px;
+  margin-top: 70px;
+  background-color: rgba(219, 230, 239, 0.516);
+}
 
+.box input {
+  margin-bottom: 20px;
+  width: 100%;
+  height: 70px;
+  padding: 40px;
+  outline: none;
+  font-size: 20px;
+}
+
+.button-box {
+  text-align: center;
+  width: 100%;
+  max-width: 417px;
+  margin: 35px auto;
+  position: relative;
+  border: 4px solid;
+  border-radius: 30px;
+  white-space: nowrap;
+}
+.toggle-btn {
+  padding: 10px 30px;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  outline: none;
+  position: relative;
+  font-size: 30px;
+  font-weight: 400;
+}
+.toggle-btn:hover {
+  background-color: rgba(152, 142, 128, 0.475);
+  border-radius: 30px;
+  border-width: 2px;
+  color: white;
+}
+
+.submit-btn {
+  font-size: 30px;
+  font-weight: 00;
+  width: 100%;
+  padding: 10px 30px;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  background-color: rgb(223, 200, 170);
+  border: 0;
+  outline: none;
+  border-radius: 30px;
+}
+.submit-btn:hover {
+  background-color: rgb(195, 172, 143);
+
+  border-radius: 30px;
+}
+.input-container {
+  position: relative;
+}
+
+.form-control {
+  font-size: 20px;
+  padding-left: 40px;
+}
+
+.connecter {
+  text-align: center;
+  margin-top: 20px;
+  font-family: sans-serif;
+  font-size: 40px;
+}
+.inpute-icon {
+  position: absolute;
+  top: 50%;
+  font-size: 26px;
+  left: 10px;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
