--- a/src/Component/NoMatch/NoMatch.css
+++ b/src/Component/NoMatch/NoMatch.css
@@ -1,24 +1,29 @@
-
-.match{
-    width: 100%;
-    height: 300px;
-    text-align: center;
-    align-items: center;
+.match {
+  width: 100%;
+  height: 500px;
+  text-align: center;
+  align-items: center;
+  background-color: rgba(197, 212, 207, 0.582);
+    margin-top: 100px;
+  margin-bottom: 300px;
+}
+.back {
+  width: 100%;
+  height: 210px;
  
-    margin-top:100px ;
-    margin-bottom:300px ;
 }
-.back{
-    width: 100%;
-    height: 310px;
+
+.para {
+  margin-top: 70px;
+  margin-bottom: 40px;
+  font-size: 50px;
+  font-family: redressed;
 }
-.para{
-    font-size: 50px;
-    font-family: redressed;
+.error {
+  font-size: 150px;
 }
-.error{
-    font-size: 100px;
-}
-.cc{
-    background-color: rgba(148, 119, 130, 0);
+#succes {
+  cursor: pointer;
+  font-size: 30px;
+
 }
