--- a/src/Component/Prefabriquer/Prefabriquer.css
+++ b/src/Component/Prefabriquer/Prefabriquer.css
@@ -43,6 +43,9 @@
 .bodyy img {
   max-width: 100%;
 }
+.bodyy img:hover {
+  background: yellowgreen;
+}
 
 @media (max-width: 1000px) {
   .bg .bg-desc {
@@ -60,4 +63,40 @@
     font-size: 40px;
     margin-top: 160px;
   }
+}
+.image-container {
+  position: relative;
+}
+.image-container:hover .shade {
+  opacity: 0.5;
+}
+
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 100%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  background-color: #00000078;
+  z-index: 1;
+}
+.overlay span {
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  z-index: 2;
+}
+.overlay span:hover {
+  transform-origin: center;
+  transform: scale(1.05);
+}
+
+.image-container:hover .overlay {
+  opacity: 1;
 }
