--- a/src/Component/Restaurer/Restaurer.css
+++ b/src/Component/Restaurer/Restaurer.css
@@ -68,126 +68,85 @@
   width: 100%;
   max-width: 100%;
   height: auto;
+
 }
+#la{
+  font-size: 30px;
+}
+/* img */
 .area {
   max-width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.5);
   padding: 30px;
   border-radius: 30px;
 }
-.area h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 28px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  text-align: center;
-  align-items: center;
-  font-weight: 550;
-}
-.area form {
-  height: 167px;
+.img-area {
+  position: relative;
+  width: 100%;
+  height: 260px;
+  background: rgb(237, 244, 246);
+  margin-bottom: 30px;
+  border-radius: 15px;
+  overflow: hidden;
   display: flex;
-  margin: 30px 0;
-  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  border-radius: 5px;
-  border: 2px dashed rgb(112, 112, 190);
-}
-form :where(i, p) {
-  color: rgb(112, 112, 190);
-}
-form i {
-  font-size: 60px;
-}
-form p {
-  font-size: 18px;
-  margin-top: 15px;
-}
-section .nn {
-  background: #e9f0ff;
-  margin-top: 10px;
-  margin-bottom: 10ox;
-  list-style: none;
-  padding: 15px 20px;
-  border-radius: 5px;
-  display: flex;
   align-items: center;
-  justify-content: space-between;
-}
-section .nn i {
-  display: flex;
-  font-size: 30px;
-  color: #6990f2;
-}
-section .details span {
-  font-size: 14px;
-}
-.progress-area .nn .content {
-  width: 100%;
-  margin-left: 30px;
-}
-.progress-area .details {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 7px;
-}
-.progress-area .progress-bar {
-  background: white;
-  height: 6px;
-  width: 100%;
-  margin-bottom: 1px;
-  border-radius: 30px;
-}
-.progress-bar .progress {
-  height: 100%;
-  width: 0%;
-  background: #6990f2;
-  border-radius: inherit;
-}
-
-.uploaded-area {
-  max-height: 150px;
-  overflow-y: scroll;
-}
-.uploaded-area::-webkit-scrollbar {
-  width: 0px;
-}
-.uploaded-area .row .content {
-  display: flex;
-  align-items: center;
-}
-.uploaded-area .row .details {
-  display: flex;
-  margin-left: 15px;
   flex-direction: column;
 }
-
-.uploaded-area .details .size {
-  font-size: 11px;
-  color: #404040;
+.img-area .icone {
+  font-size: 100px;
+  color: rgb(83, 109, 221);
+  cursor: pointer;
 }
-.uploaded-area .i {
-  color: #6990f2;
+.img-area h3 {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 6px;
+}
+
+.select-image {
+  display: block;
+  width: 100%;
+  padding: 16px 0;
+  border-radius: 15px;
+  background: rgb(60, 89, 218);
+  color: #fff;
   font-size: 16px;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.select-image:hover {
+  background: rgb(35, 64, 194);
 }
 
-@media (max-width: 1000px) {
+
+
+@media only screen and (max-width: 1000px) {
   .mg .mg-desc {
     font-size: 40px;
   }
 }
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .mg .mg-desc {
     word-wrap: break-word;
     font-size: 30px;
   }
 }
 
-@media (max-width: 576px) {
+@media only screen and (max-width: 576px) {
   .mg .mg-desc {
     font-size: 30px;
     margin-top: 160px;
   }
+}
+.h11 {
+  font-family: redressed;
+  font-size: 58px;
+  color: rgb(0, 0, 7);
+  margin-bottom: 40px;
+}
+.y {
+  width: 400px;
 }
